# gl

./: .gitignore  CMakeLists.txt  Makefile  file.cpp  file.h  main.cpp  number.h  shader.cpp  shader.h
shaders/: vertex_shader.vert
